[gd_scene load_steps=4 format=3 uid="uid://dofibxfmlktfi"]

[ext_resource type="Script" uid="uid://didwnba1tmtxg" path="res://Scripts/ranked_game.gd" id="1_5ucah"]
[ext_resource type="Texture2D" uid="uid://dv4hqrlvb4e0b" path="res://Assets/Pictures/Esports Dream.png" id="2_7ivvo"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8m0ga"]
texture = ExtResource("2_7ivvo")

[node name="RankedGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5ucah")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 720.0
offset_bottom = 1280.0
theme_override_styles/panel = SubResource("StyleBoxTexture_8m0ga")

[node name="Panel2" type="Panel" parent="Panel"]
layout_mode = 0
offset_right = 720.0
offset_bottom = 1280.0

[node name="Commentary" type="Panel" parent="Panel"]
layout_mode = 0
offset_left = 22.0
offset_top = 645.0
offset_right = 697.0
offset_bottom = 1075.0

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/Commentary"]
layout_mode = 2
offset_left = 21.0
offset_top = 28.0
offset_right = 653.0
offset_bottom = 404.0

[node name="CommentaryVBox" type="VBoxContainer" parent="Panel/Commentary/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 22.0
offset_top = 30.0
offset_right = 198.0
offset_bottom = 99.0
theme_override_font_sizes/font_size = 50
text = "Team 1"

[node name="Team1Score" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 233.0
offset_top = 30.0
offset_right = 262.0
offset_bottom = 99.0
theme_override_font_sizes/font_size = 50
text = "0"

[node name="Team2Score" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 441.0
offset_top = 30.0
offset_right = 470.0
offset_bottom = 99.0
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 2

[node name="MatchTimer" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 233.0
offset_top = 99.0
offset_right = 481.0
offset_bottom = 162.0
theme_override_font_sizes/font_size = 45
text = "Time"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Player1" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 22.0
offset_top = 159.0
offset_right = 198.0
offset_bottom = 222.0
theme_override_font_sizes/font_size = 35
text = "Player 1"

[node name="player1kda" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 62.0
offset_top = 239.0
offset_right = 238.0
offset_bottom = 281.0
theme_override_font_sizes/font_size = 30
text = "K / D / A"

[node name="player2kda" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 62.0
offset_top = 384.0
offset_right = 238.0
offset_bottom = 426.0
theme_override_font_sizes/font_size = 30
text = "K / D / A"

[node name="player3kda" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 62.0
offset_top = 544.0
offset_right = 238.0
offset_bottom = 586.0
theme_override_font_sizes/font_size = 30
text = "K / D / A"

[node name="Player2" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 22.0
offset_top = 301.0
offset_right = 198.0
offset_bottom = 364.0
theme_override_font_sizes/font_size = 35
text = "Player 2"

[node name="Player3" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 22.0
offset_top = 461.0
offset_right = 198.0
offset_bottom = 524.0
theme_override_font_sizes/font_size = 35
text = "Player 3"

[node name="Player4" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 465.0
offset_top = 159.0
offset_right = 641.0
offset_bottom = 222.0
theme_override_font_sizes/font_size = 35
text = "Player 1"

[node name="player4kda" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 465.0
offset_top = 239.0
offset_right = 641.0
offset_bottom = 281.0
theme_override_font_sizes/font_size = 30
text = "K / D / A"
horizontal_alignment = 2

[node name="player5kda" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 465.0
offset_top = 384.0
offset_right = 641.0
offset_bottom = 426.0
theme_override_font_sizes/font_size = 30
text = "K / D / A"
horizontal_alignment = 2

[node name="player6kda" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 465.0
offset_top = 544.0
offset_right = 641.0
offset_bottom = 586.0
theme_override_font_sizes/font_size = 30
text = "K / D / A"
horizontal_alignment = 2

[node name="Player5" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 465.0
offset_top = 301.0
offset_right = 641.0
offset_bottom = 364.0
theme_override_font_sizes/font_size = 35
text = "Player 2"

[node name="Player6" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 465.0
offset_top = 461.0
offset_right = 641.0
offset_bottom = 524.0
theme_override_font_sizes/font_size = 35
text = "Player 3"

[node name="Label2" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 521.0
offset_top = 30.0
offset_right = 697.0
offset_bottom = 99.0
theme_override_font_sizes/font_size = 50
text = "Team 2"

[node name="Play" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 233.0
offset_top = 1106.0
offset_right = 514.0
offset_bottom = 1210.0
theme_override_font_sizes/font_size = 70
text = "Play"

[node name="Back" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 22.0
offset_top = 1141.0
offset_right = 171.0
offset_bottom = 1245.0
theme_override_font_sizes/font_size = 70
text = "<"

[node name="Timer" type="Timer" parent="Panel"]

[connection signal="pressed" from="Panel/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Panel/Back" to="." method="_on_back_pressed"]
[connection signal="timeout" from="Panel/Timer" to="." method="_on_timer_timeout"]
